some css fixes for whitegry contrasts in view page
git-svn-id: http://svn.montala.net/svn/resourcespace@4163 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/Col-whitegry.css
+++ b/css/Col-whitegry.css
@@ -78,6 +78,7 @@ input[readonly] {color: #000000;}
 .Question{border-top: 1px solid #BBBBBB;}
 .RecordPanel {background: #F0F0F0 url(../gfx/whitegry/interface/recordpanel.gif) repeat-x;	border: 1px solid #BBBBBB;}
 .RecordPanel .RecordDownloadSpace h2 {color: #3C3C3C;}
+.RecordPanel .RecordDownloadSpace .DownloadDBlend h2 {color: white;}
 .RecordDownloadSpace .HorizontalWhiteNav a:active, .RecordPanel .RecordDownloadSpace .HorizontalWhiteNav a:hover {color:#FFFFFF;} 
 .NoFind {border: 1px solid #BBBBBB;background: #FFFFFF;}
 .NoFind .highlight {color:#000000;font-weight: bold;}
@@ -104,7 +105,7 @@ input[readonly] {color: #000000;}
 
 .Tab a {border: 1px solid #BBBBBB;border-bottom-style: none;color: #666666;background-color:#C3C3C3;}
 .StyledTabbedPanel {border: 1px solid #BBBBBB;background-image: url(../gfx/whitegry/interface/Download.gif);}
-.TabSelected a {color: white;background-color:#B2B2B2;}
+.TabSelected a {font-weight:bold; background-color:#B2B2B2;color:white;}
 
 .InfoTable {border-collapse:collapse;}
 .InfoTable tr {background-image: url(../gfx/whitegry/interface/SearchBox.gif);background-repeat: repeat-x;background-color: #597499;}
